Added questions for the user on the index.html page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,241 @@
         <h2>We hope to ask you a couple questions inorder for our algorithm to find the best place for you to visit!</h2>
         <h3>When you are ready to submit press the submit button below and we will process your information. Be warry anything and everything you submit will be sold to other add agencies to maximaze out profits! so please do not use disgression!</h3>
       </div>
+      <div class="container questions">
+        <form class="blank">
+          <div class="form-group">
+            <label for="name generalHeadline">Lets start with your name, date of birth, gender id, and your social security number</label>
+            <input type="text" class="form-control" id="name">
+          </div>
+          <div class="form-group">
+            <label for="born">date of birth</label>
+            <input type="date" class="from-control" id="born">
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="pref" value="male">
+              male
+            </label>
+            <label>
+              <input type="radio" name="pref" value="female">
+              female
+            </label>
+          </div>
+<!-- social security number (put in place the - and x or 0 for numbers they haven't subbmited yet) -->
+          <p class="generalHeadline">Now that we got the info that we really wanted lets go through the motions so we can pretend to pic a destination specificaly for you! if you could drag down the select boxs and pic somehting that you think resembles you.</p>
+          <select class="form-control" name="var1">
+            <option value="option">I love the beach and would love to spend as much time there on my vacation as possible</option>
+            <option value="option">I"m a fan of the mountians and love to ski hike and ride my mountian bike. If I could of been an extra in the sound of music this is my option</option>
+            <option value="option">Take me to the city! I love a bustling metropolis! I'm spent time in Hongkong Seoul and BKK and love all that the posh city adventure affords me!</option>
+          </select>
+          <p class="generalHeadline">For the next couple questions select the radio button with the scal 1-5, 5 being the highest for how important the parameter is for your vacation</p>
+
+            <p class="question">
+              How much sun would you like on your trip?
+            </p>
+          <div class="radio">
+            <label>
+              <input type="radio" name="q1" value="1">
+              1
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="q1" value="2">
+              2
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="q1" value="3">
+              3
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="q1" value="4">
+              4
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="q1" value="5">
+              5
+            </label>
+          </div>
+          <p class="question">
+            How important is getting exercise during the week?
+          </p>
+
+          <div class="radio">
+            <label>
+              <input type="radio" name="q2" value="1">
+              1
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="q2" value="2">
+              2
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="q2" value="3">
+              3
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="q2" value="4">
+              4
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="q2" value="5">
+              5
+            </label>
+          </div>
+          <p class="question">
+            The mountians are my home?
+          </p>
+
+          <div class="radio">
+            <label>
+              <input type="radio" name="q3" value="1">
+              1
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="q3" value="2">
+              2
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="q3" value="3">
+              3
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="q3" value="4">
+              4
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="q3" value="5">
+              5
+            </label>
+          </div>
+          <p class="question">
+            How much do you eat out on a weekly basis?
+          </p>
+
+          <div class="radio">
+            <label>
+              <input type="radio" name="q4" value="1">
+              1
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="q4" value="2">
+              2
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="q4" value="3">
+              3
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="q4" value="4">
+              4
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="q4" value="5">
+              5
+            </label>
+          </div>
+          <p class="question">
+            How much do you like the beach?
+          </p>
+
+          <div class="radio">
+            <label>
+              <input type="radio" name="q5" value="1">
+              1
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="q5" value="2">
+              2
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="q5" value="3">
+              3
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="q5" value="4">
+              4
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="q5" value="5">
+              5
+            </label>
+          </div>
+          <p class="question">
+            How much do you like to be surounded by people?
+          </p>
+
+          <div class="radio">
+            <label>
+              <input type="radio" name="q5" value="1">
+              1
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="q5" value="2">
+              2
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="q5" value="3">
+              3
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="q5" value="4">
+              4
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="q5" value="5">
+              5
+            </label>
+          </div>
+
+        </form>
+      </div>
     </div>
 
 
