added button to index.html page to submit info

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
               5
             </label>
           </div>
-
+          <button type="submit" class="button">Submit Info</button>
         </form>
       </div>
     </div>
