ready to branch for functionality

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <p class="generalHeadline">For the next couple questions select the radio button with the scal 1-5, 5 being the highest for how important the parameter is for your vacation</p>
 
               <p class="question">
-                How much sun would you like on your trip?
+                1. How much sun would you like on your trip?
               </p>
             <div class="radio">
               <label>
@@ -83,7 +83,7 @@
               </label>
             </div>
             <p class="question">
-              How important is getting exercise during the week?
+              2. How important is getting exercise during the week?
             </p>
             <div class="radio">
               <label>
@@ -116,7 +116,7 @@
               </label>
             </div>
             <p class="question">
-              The mountians are my home?
+              3. The mountians are my home?
             </p>
             <div class="radio">
               <label>
@@ -149,7 +149,7 @@
               </label>
             </div>
             <p class="question">
-              How much do you eat out on a weekly basis?
+              4. How much do you eat out on a weekly basis?
             </p>
             <div class="radio">
               <label>
@@ -182,7 +182,7 @@
               </label>
             </div>
             <p class="question">
-              How much do you like the beach?
+              5. How much do you like the beach?
             </p>
             <div class="radio">
               <label>
@@ -215,7 +215,7 @@
               </label>
             </div>
             <p class="question">
-              How much do you like to be surounded by people?
+              6. How much do you like to be surounded by people?
             </p>
             <div class="radio">
               <label>
