--- a/ocean.html
+++ b/ocean.html
@@ -13,7 +13,7 @@
     <title>Ocean</title>
   </head>
   <body>
-    <h1>Ocean</h1>
+    <h1><span class="person"></span>you're going to the Ocean!!!</h1>
     <p>
       Click <a href="index.html">here</a> to go back to the main page.
     </p>
