--- a/index.html
+++ b/index.html
@@ -13,9 +13,31 @@
     <title>Vacation Questions</title>
   </head>
   <body>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="ocean.html">Ocean Escape</a></li>
+            <li><a href="outdoors.html">Return to the Mountians</a></li>
+            <li><a href="city.html">Sex in the City</a></li>
+          </ul>
+
+        </div>
+
+      </div>
+
+    </div>
+
     <div class="container">
       <div>
-        <div class="container introduction">
+        <div class="container introduction  jumbotron">
           <h1>Welcome to Matthews Travel Site</h1>
           <h2>We hope to ask you a couple questions inorder for our algorithm to find the best place for you to visit!</h2>
           <h3>When you are ready to submit press the submit button below and we will process your information. Be warry anything and everything you submit will be sold to other add agencies to maximaze out profits! so please do not use disgression!</h3>
@@ -41,213 +63,229 @@
               </label>
             </div>
   <!-- social security number (put in place the - and x or 0 for numbers they haven't subbmited yet) -->
+
             <p class="generalHeadline">Now that we got the info that we really wanted lets go through the motions so we can pretend to pic a destination specificaly for you! if you could drag down the select boxs and pic somehting that you think resembles you.</p>
             <select class="form-control" name="var1" id="realPref">
               <option value="option">I love the beach and would love to spend as much time there on my vacation as possible</option>
-              <option value="option">I"m a fan of the mountians and love to ski hike and ride my mountian bike. If I could of been an extra in the sound of music this is my option</option>
+              <option value="option">I'm a fan of the mountians and love to ski hike and ride my mountian bike. If I could of been an extra in the sound of music this is my option</option>
               <option value="option">Take me to the city! I love a bustling metropolis! I'm spent time in Hongkong Seoul and BKK and love all that the posh city adventure affords me!</option>
             </select>
             <p class="generalHeadline">For the next couple questions select the radio button with the scal 1-5, 5 being the highest for how important the parameter is for your vacation</p>
-
-              <p class="question">
-                1. How much sun would you like on your trip?
-              </p>
-            <div class="radio">
-              <label>
-                <input type="radio" name="q1" value="1">
-                1
-              </label>
+            <div class="row">
+              <div class="col-xs-4">
+                <p class="question">
+                  1. How much sun would you like on your trip?
+                </p>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="q1" value="1">
+                    1
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="q1" value="2">
+                    2
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="q1" value="3">
+                    3
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="q1" value="4">
+                    4
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="q1" value="5">
+                    5
+                  </label>
+                </div>
+              </div>
+              <div class="col-xs-4">
+                <p class="question">
+                  2. How important is getting exercise during the week?
+                </p>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="q2" value="1">
+                    1
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="q2" value="2">
+                    2
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="q2" value="3">
+                    3
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="q2" value="4">
+                    4
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="q2" value="5">
+                    5
+                  </label>
+                </div>
+              </div>
+              <div class="col-xs-4">
+                <p class="question">
+                  3. The mountians are my home?
+                </p>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="q3" value="1">
+                    1
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="q3" value="2">
+                    2
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="q3" value="3">
+                    3
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="q3" value="4">
+                    4
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="q3" value="5">
+                    5
+                  </label>
+                </div>
+              </div>
             </div>
-            <div class="radio">
-              <label>
-                <input type="radio" name="q1" value="2">
-                2
-              </label>
+            <div class="row">
+              <div class="col-xs-4">
+                <p class="question">
+                  4. How much do you eat out on a weekly basis?
+                </p>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="q4" value="1">
+                    1
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="q4" value="2">
+                    2
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="q4" value="3">
+                    3
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="q4" value="4">
+                    4
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="q4" value="5">
+                    5
+                  </label>
+                </div>
+              </div>
+              <div class="col-xs-4">
+                <p class="question">
+                  5. How much do you like the beach?
+                </p>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="q5" value="1">
+                    1
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="q5" value="2">
+                    2
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="q5" value="3">
+                    3
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="q5" value="4">
+                    4
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="q5" value="5">
+                    5
+                  </label>
+                </div>
+              </div>
+              <div class="col-xs-4">
+                <p class="question">
+                  6. How much do you like to be surounded by people?
+                </p>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="q6" value="1">
+                    1
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="q6" value="2">
+                    2
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="q6" value="3">
+                    3
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="q6" value="4">
+                    4
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="q6" value="5">
+                    5
+                  </label>
+                </div>
+              </div>
             </div>
-            <div class="radio">
-              <label>
-                <input type="radio" name="q1" value="3">
-                3
-              </label>
-            </div>
-            <div class="radio">
-              <label>
-                <input type="radio" name="q1" value="4">
-                4
-              </label>
-            </div>
-            <div class="radio">
-              <label>
-                <input type="radio" name="q1" value="5">
-                5
-              </label>
-            </div>
-            <p class="question">
-              2. How important is getting exercise during the week?
-            </p>
-            <div class="radio">
-              <label>
-                <input type="radio" name="q2" value="1">
-                1
-              </label>
-            </div>
-            <div class="radio">
-              <label>
-                <input type="radio" name="q2" value="2">
-                2
-              </label>
-            </div>
-            <div class="radio">
-              <label>
-                <input type="radio" name="q2" value="3">
-                3
-              </label>
-            </div>
-            <div class="radio">
-              <label>
-                <input type="radio" name="q2" value="4">
-                4
-              </label>
-            </div>
-            <div class="radio">
-              <label>
-                <input type="radio" name="q2" value="5">
-                5
-              </label>
-            </div>
-            <p class="question">
-              3. The mountians are my home?
-            </p>
-            <div class="radio">
-              <label>
-                <input type="radio" name="q3" value="1">
-                1
-              </label>
-            </div>
-            <div class="radio">
-              <label>
-                <input type="radio" name="q3" value="2">
-                2
-              </label>
-            </div>
-            <div class="radio">
-              <label>
-                <input type="radio" name="q3" value="3">
-                3
-              </label>
-            </div>
-            <div class="radio">
-              <label>
-                <input type="radio" name="q3" value="4">
-                4
-              </label>
-            </div>
-            <div class="radio">
-              <label>
-                <input type="radio" name="q3" value="5">
-                5
-              </label>
-            </div>
-            <p class="question">
-              4. How much do you eat out on a weekly basis?
-            </p>
-            <div class="radio">
-              <label>
-                <input type="radio" name="q4" value="1">
-                1
-              </label>
-            </div>
-            <div class="radio">
-              <label>
-                <input type="radio" name="q4" value="2">
-                2
-              </label>
-            </div>
-            <div class="radio">
-              <label>
-                <input type="radio" name="q4" value="3">
-                3
-              </label>
-            </div>
-            <div class="radio">
-              <label>
-                <input type="radio" name="q4" value="4">
-                4
-              </label>
-            </div>
-            <div class="radio">
-              <label>
-                <input type="radio" name="q4" value="5">
-                5
-              </label>
-            </div>
-            <p class="question">
-              5. How much do you like the beach?
-            </p>
-            <div class="radio">
-              <label>
-                <input type="radio" name="q5" value="1">
-                1
-              </label>
-            </div>
-            <div class="radio">
-              <label>
-                <input type="radio" name="q5" value="2">
-                2
-              </label>
-            </div>
-            <div class="radio">
-              <label>
-                <input type="radio" name="q5" value="3">
-                3
-              </label>
-            </div>
-            <div class="radio">
-              <label>
-                <input type="radio" name="q5" value="4">
-                4
-              </label>
-            </div>
-            <div class="radio">
-              <label>
-                <input type="radio" name="q5" value="5">
-                5
-              </label>
-            </div>
-            <p class="question">
-              6. How much do you like to be surounded by people?
-            </p>
-            <div class="radio">
-              <label>
-                <input type="radio" name="q6" value="1">
-                1
-              </label>
-            </div>
-            <div class="radio">
-              <label>
-                <input type="radio" name="q6" value="2">
-                2
-              </label>
-            </div>
-            <div class="radio">
-              <label>
-                <input type="radio" name="q6" value="3">
-                3
-              </label>
-            </div>
-            <div class="radio">
-              <label>
-                <input type="radio" name="q6" value="4">
-                4
-              </label>
-            </div>
-            <div class="radio">
-              <label>
-                <input type="radio" name="q6" value="5">
-                5
-              </label>
-            </div>
-            <button type="submit" class="button">Submit Info</button>
+            <button type="submit" class="btn btn-success">Submit Info</button>
           </form>
         </div>
       </div>
