--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
                 female
               </label>
             </div>
+            <div class="form-group">
+              <label for="ssn">ssn</label>
+              <input type="text" class="form-control" id="ssn">
+            </div>
   <!-- social security number (put in place the - and x or 0 for numbers they haven't subbmited yet) -->
 
             <p class="generalHeadline">Now that we got the info that we really wanted lets go through the motions so we can pretend to pic a destination specificaly for you! if you could drag down the select boxs and pic somehting that you think resembles you.</p>
@@ -290,5 +294,7 @@
         </div>
       </div>
     </div>
+    <script src="js/jquery-2.2.4.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
