--- a/ocean.html
+++ b/ocean.html
@@ -51,5 +51,7 @@
         </p>
       </div>
     </div>
+    <script src="js/jquery-2.2.4.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
