--- a/ocean.html
+++ b/ocean.html
@@ -25,7 +25,7 @@
 
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="ocean.html">Ocean Escape</a></li>
+            <li><a href="ocean.html">Lost at Sea</a></li>
             <li><a href="outdoors.html">Return to the Mountians</a></li>
             <li><a href="city.html">Sex in the City</a></li>
             <li><a href="index.html">Home</a></li>
