almost finished with modalSSS :P

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 
             <p class="generalHeadline">Now that we got the info that we really wanted lets go through the motions so we can pretend to pic a destination specificaly for you! if you could drag down the select boxs and pic somehting that you think resembles you.</p>
             <select class="form-control" name="var1" id="realPref">
-              <option value="option">I love the beach and would love to spend as much time there on my vacation as possible</option>
-              <option value="option">I'm a fan of the mountians and love to ski hike and ride my mountian bike. If I could of been an extra in the sound of music this is my option</option>
-              <option value="option">Take me to the city! I love a bustling metropolis! I'm spent time in Hongkong Seoul and BKK and love all that the posh city adventure affords me!</option>
+              <option value="q15">I love the beach and would love to spend as much time there on my vacation as possible</option>
+              <option value="q23">I'm a fan of the mountians and love to ski hike and ride my mountian bike. If I could of been an extra in the sound of music this is my option</option>
+              <option value="q46">Take me to the city! I love a bustling metropolis! I'm spent time in Hongkong Seoul and BKK and love all that the posh city adventure affords me!</option>
             </select>
             <p class="generalHeadline">For the next couple questions select the radio button with the scal 1-5, 5 being the highest for how important the parameter is for your vacation</p>
             <div class="row">
@@ -300,6 +300,29 @@
         </div>
       </div>
     </div>
+    <!-- model -->
+    <div class="modal fade" id="textModal">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title"><span class="person"></span> I hope you got what you want</h4>
+
+          </div>
+          <div class="modal-body">
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+
+    <!-- end model -->
+<!-- text modal -->
+
+<a href="#textModal" data-toggle="modal">link</a>
+
     <script src="js/jquery-2.2.4.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
